--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Publish package to GitHub Packages
 on: push
 jobs:
@@ -13,8 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '17' # Set Java version to 17
+          distribution: 'temurin' # You can also use 'adopt', 'zulu', or others
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
