--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>JwtAuthority</artifactId>
+	<artifactId>java-maven</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JwtAuthority</name>
 	<description>Demo project for Spring Boot</description>
